--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "webpack serve",
     "build": "webpack",
     "test": "jest --coverage --watchAll",
+    "badges": "istanbul-badges-readme",
     "lint:prettier": "prettier --write ."
   },
   "repository": {
@@ -21,8 +22,8 @@
   "homepage": "https://github.com/o2sevruk/otus-js-basics-hw--metcast#readme",
   "devDependencies": {
     "@babel/core": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
     "@babel/plugin-transform-runtime": "^7.13.8",
+    "@babel/preset-env": "^7.12.13",
     "@types/jest": "^26.0.20",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
@@ -36,6 +37,7 @@
     "eslint-plugin-import": "^2.22.1",
     "html-webpack-plugin": "^5.2.0",
     "husky": "^5.0.9",
+    "istanbul-badges-readme": "^1.2.0",
     "jest": "^26.6.3",
     "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^10.5.4",
@@ -56,7 +58,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "pre-push": "npm test"
+      "pre-push": "npm test && npm badges"
     }
   },
   "dependencies": {
