--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -4,7 +4,8 @@ on: push
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
+    
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
