--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && test && badges && git add 'README.md'"
+      "pre-commit": "lint-staged",
+      "pre-push": "npx mrm run test && badges && git add 'README.md'"
     }
   },
   "dependencies": {
