--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "pre-push": "npm run test"
+      "pre-push": "npm test"
     }
   },
   "dependencies": {
