--- a/.github/workflows/sanity-check.yml
+++ b/.github/workflows/sanity-check.yml
@@ -16,6 +16,6 @@ jobs:
       - name: Lint check
         run: |
           npm run lint
-      - name: Lint check
+      - name: Tests check
         run: |
           npm run test
